--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                <i class="fab fa-weebly"></i>
              </div>
              <div class="data">
-               www.limapedidos.com
+               abellimac.github.io/abellima
              </div>
            </li>
          </ul>
@@ -197,6 +197,15 @@
            <li>
              <div class="skill_name">
                ReactJS
+             </div>
+             <div class="skill_progress">
+               <span style="width: 30%;"></span>
+             </div>
+             <div class="skill_per">30%</div>
+           </li>
+           <li>
+             <div class="skill_name">
+               Firebase
              </div>
              <div class="skill_progress">
                <span style="width: 30%;"></span>
