--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
            </li>
            <li>
              <div class="skill_name">
-               JQUERY
+               Jquery
              </div>
              <div class="skill_progress">
                <span style="width: 70%;"></span>
@@ -124,6 +124,15 @@
            </li>
            <li>
              <div class="skill_name">
+               MySQL
+             </div>
+             <div class="skill_progress">
+               <span style="width: 80%;"></span>
+             </div>
+             <div class="skill_per">80%</div>
+           </li>
+           <li>
+             <div class="skill_name">
                CodeIgniter
              </div>
              <div class="skill_progress">
@@ -133,7 +142,7 @@
            </li>
            <li>
              <div class="skill_name">
-               SASS
+               Sass
              </div>
              <div class="skill_progress">
                <span style="width: 40%;"></span>
@@ -142,7 +151,7 @@
            </li>
            <li>
              <div class="skill_name">
-               PHOTOSHOP
+               Photoshop
              </div>
              <div class="skill_progress">
                <span style="width: 60%;"></span>
@@ -151,7 +160,7 @@
            </li>
            <li>
              <div class="skill_name">
-               WORDPRESS
+               Wordpress
              </div>
              <div class="skill_progress">
                <span style="width: 50%;"></span>
@@ -160,7 +169,7 @@
            </li>
            <li>
              <div class="skill_name">
-               SHOPIFY
+               Shopify
              </div>
              <div class="skill_progress">
                <span style="width: 50%;"></span>
@@ -175,15 +184,6 @@
                <span style="width: 40%;"></span>
              </div>
              <div class="skill_per">40%</div>
-           </li>
-           <li>
-             <div class="skill_name">
-               MySQL
-             </div>
-             <div class="skill_progress">
-               <span style="width: 80%;"></span>
-             </div>
-             <div class="skill_per">80%</div>
            </li>
            <li>
              <div class="skill_name">
