--- a/index.html
+++ b/index.html
@@ -264,7 +264,7 @@
         <div class="title">
            <p class="bold">Sobre mi</p>
          </div>
-        <p>Soy una persona respetuoso, puntual y sociable. Además soy dinámico y atento. Confío en mí y en mis compañeros. Se trabajar en equipo. Soy una persona de metas y proyectos.</p>
+        <p>Soy una persona respetuosa, puntual y sociable. Además soy dinámico y atento. Confío en mí y en mis compañeros. Se trabajar en equipo. Soy una persona de metas y proyectos.</p>
         <br>
         <p>Fecha de Nacimiento: 4 de agosto de 1990 (30 Años)</p>
         <p>Dirección: Prov. Warnes</p>
